Bug 351573 - No stereotype display for use cases
Summary: No stereotype display for use cases
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.16.3 (KDE Applications 15.04.3)
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-21 17:02 UTC by Ralf Habacker
Modified: 2015-08-21 17:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.17.1 (KDE Applications 15.08.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-08-21 17:02:43 UTC
The property dialog for use cases provide a stereotype An entered  stereotype value is not displayed in the related widget.  

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. create use case diagram
3. add use case
4. open use case properties and enter/select a stereotype

Actual Results:  
The stereotype value is not displayed.

Expected Results:  
The stereotype value should be displayed
Comment 1 Ralf Habacker 2015-08-21 17:27:04 UTC
Git commit fadba0249b859fe70b7466979561e9fde659c283 by Ralf Habacker.
Committed on 21/08/2015 at 17:26.
Pushed by habacker into branch 'Applications/15.08'.

Fix 'No stereotype display for use cases'.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)

M  +7    -2    umbrello/widgets/usecasewidget.cpp

http://commits.kde.org/umbrello/fadba0249b859fe70b7466979561e9fde659c283