Fix 'No stereotype display for use cases'.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)
BUG:351573